rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__w.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 16,
        "id": {
          "commentStart": 0,
          "end": 3,
          "moduleId": 0,
          "name": "pt1",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 6,
          "computed": true,
          "end": 16,
          "moduleId": 0,
          "object": {
            "abs_path": false,
            "commentStart": 6,
            "end": 8,
            "moduleId": 0,
            "name": {
              "commentStart": 6,
              "end": 8,
              "moduleId": 0,
              "name": "b1",
              "start": 6,
              "type": "Identifier"
            },
            "path": [],
            "start": 6,
            "type": "Name",
            "type": "Name"
          },
          "property": {
            "commentStart": 9,
            "end": 15,
            "moduleId": 0,
            "raw": "'zero'",
            "start": 9,
            "type": "Literal",
            "type": "Literal",
            "value": "zero"
          },
          "start": 6,
          "type": "MemberExpression",
          "type": "MemberExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 16,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 16,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
