rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__x.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 13,
        "id": {
          "commentStart": 0,
          "end": 3,
          "moduleId": 0,
          "name": "pt1",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 6,
          "computed": false,
          "end": 13,
          "moduleId": 0,
          "object": {
            "abs_path": false,
            "commentStart": 6,
            "end": 8,
            "moduleId": 0,
            "name": {
              "commentStart": 6,
              "end": 8,
              "moduleId": 0,
              "name": "b1",
              "start": 6,
              "type": "Identifier"
            },
            "path": [],
            "start": 6,
            "type": "Name",
            "type": "Name"
          },
          "property": {
            "abs_path": false,
            "commentStart": 9,
            "end": 13,
            "moduleId": 0,
            "name": {
              "commentStart": 9,
              "end": 13,
              "moduleId": 0,
              "name": "zero",
              "start": 9,
              "type": "Identifier"
            },
            "path": [],
            "start": 9,
            "type": "Name",
            "type": "Name"
          },
          "start": 6,
          "type": "MemberExpression",
          "type": "MemberExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 13,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 13,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
