rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__y.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 43,
        "id": {
          "commentStart": 0,
          "end": 2,
          "moduleId": 0,
          "name": "sg",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "body": [
            {
              "arguments": [],
              "callee": {
                "abs_path": false,
                "commentStart": 5,
                "end": 18,
                "moduleId": 0,
                "name": {
                  "commentStart": 5,
                  "end": 18,
                  "moduleId": 0,
                  "name": "startSketchOn",
                  "start": 5,
                  "type": "Identifier"
                },
                "path": [],
                "start": 5,
                "type": "Name"
              },
              "commentStart": 5,
              "end": 22,
              "moduleId": 0,
              "start": 5,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": {
                "abs_path": false,
                "commentStart": 19,
                "end": 21,
                "moduleId": 0,
                "name": {
                  "commentStart": 19,
                  "end": 21,
                  "moduleId": 0,
                  "name": "XY",
                  "start": 19,
                  "type": "Identifier"
                },
                "path": [],
                "start": 19,
                "type": "Name",
                "type": "Name"
              }
            },
            {
              "arguments": [],
              "callee": {
                "abs_path": false,
                "commentStart": 26,
                "end": 38,
                "moduleId": 0,
                "name": {
                  "commentStart": 26,
                  "end": 38,
                  "moduleId": 0,
                  "name": "startProfile",
                  "start": 26,
                  "type": "Identifier"
                },
                "path": [],
                "start": 26,
                "type": "Name"
              },
              "commentStart": 26,
              "end": 43,
              "moduleId": 0,
              "start": 26,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": {
                "abs_path": false,
                "commentStart": 39,
                "end": 42,
                "moduleId": 0,
                "name": {
                  "commentStart": 39,
                  "end": 42,
                  "moduleId": 0,
                  "name": "pos",
                  "start": 39,
                  "type": "Identifier"
                },
                "path": [],
                "start": 39,
                "type": "Name",
                "type": "Name"
              }
            }
          ],
          "commentStart": 5,
          "end": 43,
          "moduleId": 0,
          "start": 5,
          "type": "PipeExpression",
          "type": "PipeExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 43,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 43,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
