rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__z.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 68,
        "id": {
          "commentStart": 0,
          "end": 2,
          "moduleId": 0,
          "name": "sg",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "body": [
            {
              "arguments": [],
              "callee": {
                "abs_path": false,
                "commentStart": 5,
                "end": 18,
                "moduleId": 0,
                "name": {
                  "commentStart": 5,
                  "end": 18,
                  "moduleId": 0,
                  "name": "startSketchOn",
                  "start": 5,
                  "type": "Identifier"
                },
                "path": [],
                "start": 5,
                "type": "Name"
              },
              "commentStart": 5,
              "end": 22,
              "moduleId": 0,
              "start": 5,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": {
                "abs_path": false,
                "commentStart": 19,
                "end": 21,
                "moduleId": 0,
                "name": {
                  "commentStart": 19,
                  "end": 21,
                  "moduleId": 0,
                  "name": "XY",
                  "start": 19,
                  "type": "Identifier"
                },
                "path": [],
                "start": 19,
                "type": "Name",
                "type": "Name"
              }
            },
            {
              "arguments": [],
              "callee": {
                "abs_path": false,
                "commentStart": 30,
                "end": 42,
                "moduleId": 0,
                "name": {
                  "commentStart": 30,
                  "end": 42,
                  "moduleId": 0,
                  "name": "startProfile",
                  "start": 30,
                  "type": "Identifier"
                },
                "path": [],
                "start": 30,
                "type": "Name"
              },
              "commentStart": 30,
              "end": 47,
              "moduleId": 0,
              "start": 30,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": {
                "abs_path": false,
                "commentStart": 43,
                "end": 46,
                "moduleId": 0,
                "name": {
                  "commentStart": 43,
                  "end": 46,
                  "moduleId": 0,
                  "name": "pos",
                  "start": 43,
                  "type": "Identifier"
                },
                "path": [],
                "start": 43,
                "type": "Name",
                "type": "Name"
              }
            },
            {
              "arguments": [],
              "callee": {
                "abs_path": false,
                "commentStart": 51,
                "end": 55,
                "moduleId": 0,
                "name": {
                  "commentStart": 51,
                  "end": 55,
                  "moduleId": 0,
                  "name": "line",
                  "start": 51,
                  "type": "Identifier"
                },
                "path": [],
                "start": 51,
                "type": "Name"
              },
              "commentStart": 51,
              "end": 68,
              "moduleId": 0,
              "start": 51,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": {
                "commentStart": 56,
                "elements": [
                  {
                    "commentStart": 57,
                    "end": 58,
                    "moduleId": 0,
                    "raw": "0",
                    "start": 57,
                    "type": "Literal",
                    "type": "Literal",
                    "value": {
                      "value": 0.0,
                      "suffix": "None"
                    }
                  },
                  {
                    "argument": {
                      "abs_path": false,
                      "commentStart": 61,
                      "end": 66,
                      "moduleId": 0,
                      "name": {
                        "commentStart": 61,
                        "end": 66,
                        "moduleId": 0,
                        "name": "scale",
                        "start": 61,
                        "type": "Identifier"
                      },
                      "path": [],
                      "start": 61,
                      "type": "Name",
                      "type": "Name"
                    },
                    "commentStart": 60,
                    "end": 66,
                    "moduleId": 0,
                    "operator": "-",
                    "start": 60,
                    "type": "UnaryExpression",
                    "type": "UnaryExpression"
                  }
                ],
                "end": 67,
                "moduleId": 0,
                "start": 56,
                "type": "ArrayExpression",
                "type": "ArrayExpression"
              }
            }
          ],
          "commentStart": 5,
          "end": 68,
          "moduleId": 0,
          "start": 5,
          "type": "PipeExpression",
          "type": "PipeExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 68,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 68,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
